--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,9 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
-          
+          python-version: '3.14'
+
+          - name: Install pygame
+  run: pip install pygame
       - name: Run main.py
         run: python main.py
